Fix: css for the overflowing select

--- a/client/app/src/components/EventForm/index.module.scss
+++ b/client/app/src/components/EventForm/index.module.scss
@@ -21,3 +21,7 @@
 .locationInput {
   overflow: visible !important;
 }
+
+.formField {
+  overflow: inherit !important;
+}
